StereoKitC/stereokit.h

typedef int32_t  bool32_t;
typedef struct vec3 {
	float x;
	float y;
	float z;
} vec3;
typedef struct vec4 {
	float x;
	float y;
	float z;
	float w;
} vec4;
typedef union matrix {
	vec4 row[4];
	float m[16];
} matrix;
typedef struct rect_t {
	float x;
	float y;
	float w;
	float h;
} rect_t;
typedef struct bounds_t {
	vec3 center;
	vec3 dimensions;
} bounds_t;
typedef struct pose_t {
	vec3 position;
	quat orientation;
} pose_t;
typedef enum tex_format_ {
	tex_format_none = 0,
	tex_format_rgba32_srgb,
	tex_format_rgba32 = tex_format_rgba32_srgb,
	tex_format_rgba32_linear,
	tex_format_bgra32_srgb,
	tex_format_bgra32 = tex_format_bgra32_srgb,
	tex_format_bgra32_linear,
	tex_format_rgba64un,
	tex_format_rgba64    = tex_format_rgba64un,
	tex_format_rgba64sn,
	tex_format_rgba64ui,
	tex_format_rgba64si,
	tex_format_rgba64f,
	tex_format_rgba128,
	tex_format_rgba128f  = tex_format_rgba128,
	tex_format_rg11b10,
	tex_format_rg11b10uf = tex_format_rg11b10,
	tex_format_rgb10a2,
	tex_format_rgb9e5,
	tex_format_rgb9e5uf  = tex_format_rgb9e5,
	tex_format_r8,
	tex_format_r8sn,
	tex_format_r8ui,
	tex_format_r8si,
	tex_format_r8_srgb,
	tex_format_r8g8,
	tex_format_r16un,
	tex_format_r16  = tex_format_r16un,
	tex_format_r16u = tex_format_r16un,
	tex_format_r16sn,
	tex_format_r16s = tex_format_r16sn,
	tex_format_r16ui,
	tex_format_r16si,
	tex_format_r16f,
	tex_format_r32ui,
	tex_format_r32si,
	tex_format_r32f,
	tex_format_r32 = tex_format_r32f,
	tex_format_depth16,
	tex_format_depth16s8,
	tex_format_depth24s8,
	tex_format_depthstencil = tex_format_depth24s8,
	tex_format_depth32,
	tex_format_depth32s8,
	tex_format_bc1_rgb_srgb,
	tex_format_bc1_rgb,
	tex_format_bc1_rgba_srgb,
	tex_format_bc1_rgba,
	tex_format_bc2_rgba_srgb,
	tex_format_bc2_rgba,
	tex_format_bc3_rgba_srgb,
	tex_format_bc3_rgba,
	tex_format_bc4_r,
	tex_format_bc4_rsn,
	tex_format_bc5_rg,
	tex_format_bc5_rgsn,
	tex_format_bc6h_rgbuf,
	tex_format_bc6h_rgbf,
	tex_format_bc7_rgba_srgb,
	tex_format_bc7_rgba,
	tex_format_etc1_rgb,
	tex_format_etc2_rgba_srgb,
	tex_format_etc2_rgba,
	tex_format_etc2_r11,
	tex_format_etc2_rg11,
	tex_format_pvrtc1_rgb_srgb,
	tex_format_pvrtc1_rgb,
	tex_format_pvrtc1_rgba_srgb,
	tex_format_pvrtc1_rgba,
	tex_format_pvrtc2_rgba_srgb,
	tex_format_pvrtc2_rgba,
	tex_format_astc4x4_rgba_srgb,
	tex_format_astc4x4_rgba,
	tex_format_atc_rgb,
	tex_format_atc_rgba,
	tex_format_nv12,
	tex_format_p010,
	tex_format_yuv420p,
} tex_format_;
typedef enum log_ {
	log_none = 0,
	log_diagnostic,
	log_inform,
	log_warning,
	log_error
} log_;
typedef enum render_layer_ {
	render_layer_0                = 1 << 0,
	render_layer_1                = 1 << 1,
	render_layer_2                = 1 << 2,
	render_layer_3                = 1 << 3,
	render_layer_4                = 1 << 4,
	render_layer_5                = 1 << 5,
	render_layer_6                = 1 << 6,
	render_layer_7                = 1 << 7,
	render_layer_8                = 1 << 8,
	render_layer_9                = 1 << 9,
	render_layer_vfx              = 1 << 10,
	render_layer_first_person     = 1 << 11,
	render_layer_third_person     = 1 << 12,
	render_layer_ui               = 1 << 13,
	render_layer_all              = 0xFFFF,
	render_layer_all_regular      = render_layer_0 | render_layer_1 | render_layer_2 | render_layer_3 | render_layer_4 | render_layer_5 | render_layer_6 | render_layer_7 | render_layer_8 | render_layer_9,
	render_layer_all_first_person = render_layer_all & ~render_layer_third_person,
	render_layer_all_third_person = render_layer_all & ~render_layer_first_person,
} render_layer_;
SK_API bool32_t      sk_step               (void (*app_step)(void));
SK_API void          sk_run                (void (*app_step)(void), void (*app_shutdown)(void) sk_default(nullptr));
SK_API void          sk_run_data           (void (*app_step)(void *step_data), void *step_data, void (*app_shutdown)(void *shutdown_data), void *shutdown_data);
SK_API bounds_t bounds_grow_to_fit_box (bounds_t bounds, bounds_t box, const matrix *opt_box_transform sk_default(nullptr));
typedef struct color32 {
	uint8_t r;
	uint8_t g;
	uint8_t b;
	uint8_t a;
} color32;
typedef struct color128 {
	float r;
	float g;
	float b;
	float a;
} color128;
typedef struct spherical_harmonics_t {
	vec3     coefficients[9];
} spherical_harmonics_t;
SK_API void         mesh_on_load         (mesh_t mesh, void (*asset_on_load_callback)(mesh_t mesh, void *context), void *context);
SK_API void         mesh_on_load_remove  (mesh_t mesh, void (*asset_on_load_callback)(mesh_t mesh, void *context));
SK_API tex_t        tex_create_mem          (void *data, size_t data_size,                  bool32_t srgb_data sk_default(true), int32_t priority sk_default(10));
SK_API void         tex_on_load             (tex_t texture, void (*asset_on_load_callback)(tex_t texture, void *context), void *context);
SK_API void         tex_on_load_remove      (tex_t texture, void (*asset_on_load_callback)(tex_t texture, void *context));
SK_API void         tex_set_colors          (tex_t texture, int32_t width, int32_t height, void *data);
SK_API void         tex_set_color_arr       (tex_t texture, int32_t width, int32_t height, void** array_data, int32_t array_count,                    int32_t multisample sk_default(1), spherical_harmonics_t* out_sh_lighting_info sk_default(nullptr));
SK_API void         tex_set_color_arr_mips  (tex_t texture, int32_t width, int32_t height, void** array_data, int32_t array_count, int32_t mip_count, int32_t multisample sk_default(1), spherical_harmonics_t* out_sh_lighting_info sk_default(nullptr));
SK_API void         tex_set_colors_3d       (tex_t texture, int32_t width, int32_t height, int32_t depth, void *data);
SK_API void         tex_set_mem             (tex_t texture, void* data, size_t data_size, bool32_t srgb_data sk_default(true), bool32_t blocking sk_default(false), int32_t priority sk_default(10));
SK_API void         tex_add_zbuffer         (tex_t texture, tex_format_ format sk_default(tex_format_depthstencil));
SK_API tex_t        tex_gen_cubemap         (const gradient_t gradient, vec3 gradient_dir, int32_t resolution, spherical_harmonics_t *out_sh_lighting_info sk_default(nullptr));
SK_API shader_t     shader_create_mem       (void *data, size_t data_size);
SK_API model_t       model_create_mem              (const char *filename_utf8, const void *data, size_t data_size, shader_t shader sk_default(nullptr), int32_t priority sk_default(10));
SK_API void          model_on_load                 (model_t model, void (*asset_on_load_callback)(model_t model, void *context), void *context);
SK_API void          model_on_load_remove          (model_t model, void (*asset_on_load_callback)(model_t model, void *context));
typedef enum render_clear_ {
	render_clear_none  = 0,
	render_clear_color = 1 << 0,
	render_clear_depth = 1 << 1,
	render_clear_all   = render_clear_color | render_clear_depth,
} render_clear_;
SK_API void                  render_screenshot_capture  (void (*render_on_screenshot_callback)(color32* color_buffer, int32_t width, int32_t height, void* context), pose_t viewpoint, int32_t width, int32_t height, float field_of_view_degrees, tex_format_ tex_format sk_default(tex_format_rgba32), void *context sk_default(nullptr));
SK_API void                  render_screenshot_viewpoint(void (*render_on_screenshot_callback)(color32* color_buffer, int32_t width, int32_t height, void* context), matrix camera, matrix projection, int32_t width, int32_t height, render_layer_ layer_filter sk_default(render_layer_all), render_clear_ clear sk_default(render_clear_all), rect_t viewport sk_default(rect_t{}), tex_format_ tex_format sk_default(tex_format_rgba32), void* context sk_default(nullptr));
SK_API void                  render_to             (tex_t to_rendertarget, int32_t to_target_index, const matrix* in_arr_cameras, const matrix* in_arr_projections, int32_t view_count, render_layer_ layer_filter sk_default(render_layer_all), int32_t material_variant sk_default(0), render_clear_ clear sk_default(render_clear_all), rect_t viewport sk_default({}));
SK_API void                  render_list_draw_now     (      render_list_t list, tex_t to_rendertarget, const matrix* in_arr_cameras, const matrix* in_arr_projections, int32_t view_count, color128 clear_color sk_default({ 0,0,0,0 }), render_clear_ clear sk_default(render_clear_all), rect_t viewport_pct sk_default({}), render_layer_ layer_filter sk_default(render_layer_all), int32_t material_variant sk_default(0));
SK_API sound_t      sound_generate       (float (*audio_generator)(float sample_time), float duration);
SK_API void         sound_write_samples  (sound_t sound, const float *in_arr_samples,  uint64_t sample_count);
SK_API uint64_t     sound_read_samples   (sound_t sound, float       *out_arr_samples, uint64_t sample_count);
typedef struct file_filter_t {
	char ext[32];
} file_filter_t;
typedef enum picker_mode_ {
	picker_mode_open,
	picker_mode_save,
} picker_mode_;
SK_API void     platform_file_picker        (picker_mode_ mode, void *callback_data, void (*picker_callback   )(void *callback_data, bool32_t confirmed, const char *filename), const file_filter_t *filters, int32_t filter_count);
SK_API void     platform_file_picker_sz     (picker_mode_ mode, void *callback_data, void (*picker_callback_sz)(void *callback_data, bool32_t confirmed, const char *filename_ptr, int32_t filename_length), const file_filter_t *in_arr_filters, int32_t filter_count);
typedef enum button_state_ {
	button_state_inactive      = 0,
	button_state_active        = 1 << 0,
	button_state_just_inactive = 1 << 1,
	button_state_just_active   = 1 << 2,
	button_state_just_canceled = 1 << 3,
	button_state_changed       = button_state_just_inactive | button_state_just_active | button_state_just_canceled,
	button_state_any           = 0x7FFFFFFF,
} button_state_;
typedef enum input_source_ {
	input_source_any           = 0x7FFFFFFF,
	input_source_hand          = 1 << 0,
	input_source_hand_left     = 1 << 1,
	input_source_hand_right    = 1 << 2,
	input_source_gaze          = 1 << 4,
	input_source_gaze_head     = 1 << 5,
	input_source_gaze_eyes     = 1 << 6,
	input_source_gaze_cursor   = 1 << 7,
	input_source_can_press     = 1 << 8,
} input_source_;
typedef struct pointer_t {
	input_source_ source;
	button_state_ tracked;
	button_state_ state;
	ray_t         ray;
	quat          orientation;
} pointer_t;
SK_API SK_DEPRECATED void    input_subscribe                 (input_source_ source, button_state_ input_event, void (*input_event_callback)(input_source_ source, button_state_ input_event, const sk_ref(pointer_t) in_pointer));
SK_API SK_DEPRECATED void    input_unsubscribe               (input_source_ source, button_state_ input_event, void (*input_event_callback)(input_source_ source, button_state_ input_event, const sk_ref(pointer_t) in_pointer));
SK_API void              backend_openxr_add_callback_pre_session_create(void (*xr_pre_session_create_callback)(void* context), void* context);
SK_API void              backend_openxr_add_callback_poll_event        (void (*xr_poll_event_callback)(void* context, void* XrEventDataBuffer), void* context);
SK_API void              backend_openxr_remove_callback_poll_event     (void (*xr_poll_event_callback)(void* context, void* XrEventDataBuffer));
SK_API void log_subscribe  (void (*log_callback)(void* context, log_ level, const char *text), void *context sk_default(nullptr));
SK_API void log_unsubscribe(void (*log_callback)(void* context, log_ level, const char *text), void *context sk_default(nullptr));